tests/lean/1760.lean.expected.out
1760.lean:3:0: error: expected ':', ']' or term
() : Unit
